# smart-transaction-poc

./: .gitignore  README.md  dot.env  package.json  tsconfig.json
src/: buyer.ts  global.d.ts  index.ts  seller.ts
src/services/: SmartTransactionService.ts  index.ts  smarttx.ts
webasm/simple-exchange/: Cargo.toml  tweak-package-json.js
webasm/simple-exchange/src/: lib.rs
